WIP version of lucene based tag and field filtering.