@@ -87,7 +87,6 @@ import it.unimi.dsi.fastutil.floats.FloatList;
 import it.unimi.dsi.fastutil.ints.IntArrayList;
 import it.unimi.dsi.fastutil.ints.IntList;
 import it.unimi.dsi.fastutil.longs.*;
-import jakarta.persistence.Id;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.time.StopWatch;
@@ -100,13 +99,11 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
-import org.springframework.util.ReflectionUtils;
 import org.springframework.web.server.ResponseStatusException;
 
 import java.io.IOException;
 import java.io.StringWriter;
 import java.util.*;
-import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.function.Predicate;
@@ -135,13 +132,39 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
         this.computeStateProvider = computeStateProvider;
         this.searchService = searchService;
 
+        //todo this is protoype testing code. make real implementation
+        System.out.println("TODO Prototype code Remove me!");
         if (searchService != null) {
-            storage().onInsert(de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition.class, tagDef -> searchService.addTagDefinition(projectId, tagDef));
-            storage().onRemove(de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition.class, tagDef -> searchService.removeTagDefinition(projectId, tagDef.getTagName()));
+            try {
+                //todo fix event actions so that new tags are added to features
+                //todo add events to update indexe when features/runs are changing.
+                //todo think whether we want store tags on the tagged object because we have lucene index..
+                storage().onInsert(de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition.class, tagDef -> searchService.addTagValueType(projectId, tagDef.getTagName(), tagDef.getValueType()));
+                storage().onRemove(de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition.class, tagDef -> searchService.removeTagValueType(projectId, tagDef.getTagName()));
 
-            StopWatch stopWatch = new StopWatch();
-            stopWatch.start();
-            searchService.indexProject(projectId, projectSpaceManager.getProject());
+                StopWatch stopWatch = new StopWatch();
+                stopWatch.start();
+                System.out.println("Start Indexing features...");
+
+                searchService.openOrCreateProjectIndex(this);
+                //laod feature index
+                Page<AlignedFeature> features = findAlignedFeatures(Pageable.unpaged(), AlignedFeature.OptField.computedTools, AlignedFeature.OptField.tags);
+                if (features.hasContent())
+                    searchService.getSearchIndexWriter().addBeans(projectId, features.getContent());
+
+                //laod Run index
+                Page<Run> runs = findRuns(Pageable.unpaged(), Run.OptField.tags);
+                if (runs.hasContent())
+                    searchService.getSearchIndexWriter().addBeans(projectId,
+                            runs.getContent());
+
+                //todo add Compound index
+
+                System.out.println("Indexing features done in " + stopWatch);
+            } catch (IOException e) {
+                log.error("Error while initializing project space index. Closing index.", e);
+                searchService.closeProjectIndex(projectId);
+            }
         }
     }
 
@@ -817,7 +840,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     }
 
     private Pair<String[], Database.SortOrder[]> sortCompound(Sort sort) {
-        return sort(sort, Pair.of("name", Database.SortOrder.ASCENDING), s -> switch (s) {
+        return sort(sort, Pair.of("rt.middle", Database.SortOrder.ASCENDING), s -> switch (s) {
             case "rtStartSeconds" -> "rt.start";
             case "rtEndSeconds" -> "rt.end";
             default -> s;
@@ -825,7 +848,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     }
 
     private Pair<String[], Database.SortOrder[]> sortFeature(Sort sort) {
-        return sort(sort, Pair.of("name", Database.SortOrder.ASCENDING), s -> switch (s) {
+        return sort(sort, Pair.of("retentionTime.middle", Database.SortOrder.ASCENDING), s -> switch (s) {
             case "rtStartSeconds" -> "retentionTime.start";
             case "rtEndSeconds" -> "retentionTime.end";
             case "ionMass" -> "averageMass";
@@ -1178,7 +1201,8 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
                 .quantType(QuantRowType.COMPOUNDS)
                 .build();
     }
-    private FoldChange.FoldChangeBuilder<?,?> convertToApiFoldChange(de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange foldChange) {
+
+    private FoldChange.FoldChangeBuilder<?, ?> convertToApiFoldChange(de.unijena.bioinf.ms.persistence.model.core.statistics.FoldChange foldChange) {
         return FoldChange.builder()
                 .objectId(Long.toString(foldChange.getForeignId()))
                 .leftGroup(foldChange.getLeftGroup())
@@ -1187,7 +1211,6 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
                 .quantification(foldChange.getQuantification())
                 .foldChange(foldChange.getFoldChange());
     }
-
 
 
     private FeatureAnnotations extractTopCsiNovoAnnotations(long longAFIf) {
@@ -1199,24 +1222,23 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
 
     }
 
+    @SneakyThrows
     private FeatureAnnotations extractTopAnnotations(long longAFIf, Class<? extends StructureMatch> clzz) {
         final FeatureAnnotations cSum = new FeatureAnnotations();
 
-        StructureMatch structureMatch = project().findByFeatureIdStr(longAFIf, clzz, "structureRank", Database.SortOrder.ASCENDING)
-                .findFirst().orElse(null);
-
+        StructureMatch structureMatch = project().findTopStructureMatchByFeatureId(longAFIf, clzz).orElse(null);
 
         de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate formulaCandidate;
         if (structureMatch != null) {
-            formulaCandidate = project().findByFormulaIdStr(structureMatch.getFormulaId(), de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate.class)
-                    .findFirst().orElseThrow();
+            formulaCandidate = storage().getByPrimaryKey(structureMatch.getFormulaId(), de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate.class)
+                    .orElseThrow();
 
             //set Structure match
             cSum.setStructureAnnotation(convertStructureMatch(structureMatch, EnumSet.of(StructureCandidateScored.OptField.dbLinks, StructureCandidateScored.OptField.libraryMatches)));
 
             if (structureMatch instanceof CsiStructureMatch) //csi only but not denovo
-                project().findByFeatureIdStr(longAFIf, CsiStructureSearchResult.class)
-                        .findFirst().ifPresent(it -> {
+                storage().getByPrimaryKey(longAFIf, CsiStructureSearchResult.class)
+                        .ifPresent(it -> {
                             cSum.setConfidenceExactMatch(it.getConfidenceExact());
                             cSum.setConfidenceApproxMatch(it.getConfidenceApprox());
                             cSum.setExpansiveSearchState(it.getExpansiveSearchConfidenceMode());
@@ -1224,18 +1246,19 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
                             cSum.setExpandedDatabases(it.getExpandedDatabases());
                         });
         } else {
-            Pair<String[], Database.SortOrder[]> formSort = sortFormulaCandidate(null); //null == default
-            formulaCandidate = project().findByFeatureIdStr(longAFIf, de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate.class, formSort.getLeft()[0], formSort.getRight()[0])
-                    .findFirst().orElse(null); //todo should we call a page of size one instead?
+            formulaCandidate = storage().findStr(
+                            Filter.and(
+                                    Filter.where("alignedFeatureId").eq(longAFIf),
+                                    Filter.where("formulaRank").eq(1)
+                            ), de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate.class)
+                    .findFirst().orElse(null);
         }
 
         //get Canopus result. either for
         if (formulaCandidate != null) {
             cSum.setFormulaAnnotation(convertFormulaCandidate(formulaCandidate));
-//            if (structureMatch != null)
-//                cSum.getFormulaAnnotation().setTopCSIScore(structureMatch.getCsiScore());
-            project().findByFormulaIdStr(formulaCandidate.getFormulaId(), de.unijena.bioinf.ms.persistence.model.sirius.CanopusPrediction.class)
-                    .findFirst().map(cc -> CompoundClasses.of(cc.getNpcFingerprint(), cc.getCfFingerprint()))
+            storage().getByPrimaryKey(formulaCandidate.getFormulaId(), de.unijena.bioinf.ms.persistence.model.sirius.CanopusPrediction.class)
+                    .map(cc -> CompoundClasses.of(cc.getNpcFingerprint(), cc.getCfFingerprint()))
                     .ifPresent(cSum::setCompoundClassAnnotation);
         }
         return cSum;
@@ -1263,6 +1286,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
         return convertFormulaCandidate(null, candidate, EnumSet.noneOf(FormulaCandidate.OptField.class));
     }
 
+    @SneakyThrows
     private FormulaCandidate convertFormulaCandidate(@Nullable MSData msData, de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate candidate, EnumSet<FormulaCandidate.OptField> optFields) {
         final long fid = candidate.getFormulaId();
         FormulaCandidate.FormulaCandidateBuilder builder = FormulaCandidate.builder()
@@ -1276,9 +1300,9 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
                 .treeScore(candidate.getTreeScore())
                 .zodiacScore(candidate.getZodiacScore());
 
-        //todo post 6.0: we need the scores in the gui without the tree -> do we want to store stats separately from the tree?
+        //todo We need the scores in the gui without the tree -> do we want to store stats separately from the tree?
         final FTree ftree = optFields.stream().anyMatch(needTree::contains)
-                ? project().findByFormulaIdStr(fid, FTreeResult.class).findFirst().map(FTreeResult::getFTree).orElse(null)
+                ? storage().getByPrimaryKey(fid, FTreeResult.class).map(FTreeResult::getFTree).orElse(null)
                 : null;
 
         if (ftree != null) {
@@ -1306,13 +1330,13 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
 
 
         if (optFields.contains(FormulaCandidate.OptField.predictedFingerprint))
-            project().findByFormulaIdStr(fid, CsiPrediction.class).findFirst()
+            storage().getByPrimaryKey(fid, CsiPrediction.class)
                     .map(fpp -> fpp.getFingerprint().toProbabilityArray()).ifPresent(builder::predictedFingerprint);
 
 
         if (optFields.contains(FormulaCandidate.OptField.canopusPredictions) || optFields.contains(FormulaCandidate.OptField.compoundClasses)) {
-            project().findByFormulaIdStr(fid, de.unijena.bioinf.ms.persistence.model.sirius.CanopusPrediction.class)
-                    .findFirst().ifPresent(cr -> {
+            storage().getByPrimaryKey(fid, de.unijena.bioinf.ms.persistence.model.sirius.CanopusPrediction.class)
+                    .ifPresent(cr -> {
                         if (optFields.contains(FormulaCandidate.OptField.canopusPredictions))
                             builder.canopusPrediction(CanopusPrediction.of(cr.getNpcFingerprint(), cr.getCfFingerprint()));
                         if (optFields.contains(FormulaCandidate.OptField.compoundClasses))
@@ -1325,27 +1349,51 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
 
     @SneakyThrows
     @Override
+    public Page<Compound> findCompounds(@Nullable String searchQuery,
+                                        Pageable pageable,
+                                        @NotNull EnumSet<Compound.OptField> optFields,
+                                        @NotNull EnumSet<AlignedFeature.OptField> optFeatureFields) {
+        if (searchQuery==null || searchQuery.isBlank())
+            return findCompounds(pageable, optFields, optFeatureFields);
+
+        if (searchService == null)
+            throw new ResponseStatusException(SERVICE_UNAVAILABLE, "Cannot perform search query. Search service not available!");
+
+        Page<String> ids = searchService.getSearchIndexReader().search(projectId, searchQuery, pageable, Compound.class, "compoundId", "name");
+
+        //todo what is faster? filter or get by key? in theory filter should be better but with nitrite you never know.
+        List<Compound> runs = storage().findStr(Filter.where("compoundId").in(ids.stream().map(Long::parseLong).toArray(Long[]::new)), de.unijena.bioinf.ms.persistence.model.core.Compound.class)
+                .map(r -> convertToApiCompound(r, optFields, optFeatureFields)).toList();
+
+        return new PageImpl<>(runs, pageable, ids.getTotalElements());
+    }
+
+    @SneakyThrows
+    @Override
     public Page<Compound> findCompounds(Pageable pageable,
                                         @NotNull EnumSet<Compound.OptField> optFields,
                                         @NotNull EnumSet<AlignedFeature.OptField> optFeatureFields) {
-        Pair<String[], Database.SortOrder[]> sort = sortCompound(pageable.getSort());
-        Stream<de.unijena.bioinf.ms.persistence.model.core.Compound> stream;
-        if (pageable.isPaged()) {
-            stream = storage().findAllStr(de.unijena.bioinf.ms.persistence.model.core.Compound.class, pageable.getOffset(), pageable.getPageSize(), sort.getLeft(), sort.getRight());
-        } else {
-            stream = storage().findAllStr(de.unijena.bioinf.ms.persistence.model.core.Compound.class, sort.getLeft(), sort.getRight());
-        }
-        stream = stream.peek(project()::fetchAdductFeatures);
+        Stream<de.unijena.bioinf.ms.persistence.model.core.Compound> stream =
+                findPageStr(de.unijena.bioinf.ms.persistence.model.core.Compound.class, pageable, this::sortCompound)
+                        .peek(project()::fetchAdductFeatures);
 
-        if (optFeatureFields.contains(AlignedFeature.OptField.msData)) {
+        if (optFeatureFields.contains(AlignedFeature.OptField.msData))
             stream = stream.peek(c -> c.getAdductFeatures().ifPresent(features -> features.forEach(project()::fetchMsData)));
-        }
 
         List<Compound> compounds = stream.map(c -> convertToApiCompound(c, optFields, optFeatureFields)).toList();
 
         long total = storage().countAll(de.unijena.bioinf.ms.persistence.model.core.Compound.class);
 
         return new PageImpl<>(compounds, pageable, total);
+    }
+
+    @SneakyThrows
+    @Override
+    public Page<Compound> findCompoundsByGroup(@NotNull String groupName, Pageable pageable, @NotNull EnumSet<Compound.OptField> optFields, @NotNull EnumSet<AlignedFeature.OptField> optFeatureFields) {
+        Optional<de.unijena.bioinf.ms.persistence.model.core.tags.TagGroup> tagGroup = storage().findStr(Filter.where("groupName").eq(groupName), de.unijena.bioinf.ms.persistence.model.core.tags.TagGroup.class).findFirst();
+        if (tagGroup.isEmpty())
+            return Page.empty();
+        return findCompounds(tagGroup.get().getLuceneQuery(), pageable, optFields, optFeatureFields);
     }
 
     private void setProjectTypeOrThrow(SiriusProjectDocumentDatabase<? extends Database<?>> ps) {
@@ -1428,25 +1476,28 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     }
 
 
+    @SneakyThrows
     @Override
     public Page<AlignedFeature> findAlignedFeatures(@Nullable String searchQuery, Pageable pageable, @NotNull EnumSet<AlignedFeature.OptField> optFields) {
         if (searchQuery==null || searchQuery.isBlank())
             return findAlignedFeatures(pageable, optFields);
 
         if (searchService == null)
-            throw new IllegalStateException("Cannot perform search query. No search index available!");
+            throw new ResponseStatusException(SERVICE_UNAVAILABLE, "Cannot perform search query. Search service not available!");
 
         Page<String> ids = searchService.getSearchIndexReader().search(projectId, searchQuery, pageable, AlignedFeature.class, "alignedFeatureId", "name");
 
-        Stream<AlignedFeatures> stream = ids.stream().map(Long::parseLong).map(id -> {
-            try {
-                return storage().getByPrimaryKey(id, AlignedFeatures.class);
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            }
-        }).flatMap(Optional::stream);
+        //todo what is faster? filter or get by key? in theory filter should be better but with nitrite you never know.
+        List<AlignedFeature> features = storage().findStr(Filter.where("alignedFeatureId").in(ids.stream().map(Long::parseLong).toArray(Long[]::new)),AlignedFeatures.class)
+                .map(f -> convertToApiFeature(f, optFields)).toList();
 
-        List<AlignedFeature> features = fetchDataAndConvertAlignedFeatures(stream, optFields);
+//        List<AlignedFeature> features = ids.stream().map(Long::parseLong).map(id -> {
+//            try {
+//                return storage().getByPrimaryKey(id, AlignedFeatures.class);
+//            } catch (IOException e) {
+//                throw new RuntimeException(e);
+//            }
+//        }).flatMap(Optional::stream).map(f -> convertToApiFeature(f, optFields)).toList();
 
         return new PageImpl<>(features, pageable, ids.getTotalElements());
     }
@@ -1454,15 +1505,8 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     @SneakyThrows
     @Override
     public Page<AlignedFeature> findAlignedFeatures(Pageable pageable, @NotNull EnumSet<AlignedFeature.OptField> optFields) {
-        Stream<AlignedFeatures> stream;
-        if (pageable.isUnpaged() && pageable.getSort().isUnsorted()) {
-            stream = storage().findAllStr(AlignedFeatures.class);
-        } else {
-            Pair<String[], Database.SortOrder[]> sort = sortFeature(pageable.getSort());
-            stream = storage().findAllStr(AlignedFeatures.class, pageable.getOffset(), pageable.getPageSize(), sort.getLeft(), sort.getRight());
-        }
-
-        List<AlignedFeature> features = stream.map(alf -> convertToApiFeature(alf, optFields)).toList();
+        List<AlignedFeature> features = findPageStr(AlignedFeatures.class, pageable, this::sortFeature)
+                .map(alf -> convertToApiFeature(alf, optFields)).toList();
 
         long total = storage().countAll(AlignedFeatures.class);
 
@@ -1494,6 +1538,15 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
 
     @SneakyThrows
     @Override
+    public Page<AlignedFeature> findAlignedFeaturesByGroup(@NotNull String groupName, Pageable pageable, @NotNull EnumSet<AlignedFeature.OptField> optFields) {
+        Optional<de.unijena.bioinf.ms.persistence.model.core.tags.TagGroup> tagGroup = storage().findStr(Filter.where("groupName").eq(groupName), de.unijena.bioinf.ms.persistence.model.core.tags.TagGroup.class).findFirst();
+        if (tagGroup.isEmpty())
+            return Page.empty();
+        return findAlignedFeatures(tagGroup.get().getLuceneQuery(), pageable, optFields);
+    }
+
+    @SneakyThrows
+    @Override
     public AlignedFeature findAlignedFeaturesById(String alignedFeatureId, @NotNull EnumSet<AlignedFeature.OptField> optFields) {
         long id = Long.parseLong(alignedFeatureId);
         return storage().getByPrimaryKey(id, AlignedFeatures.class)
@@ -1510,6 +1563,25 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     @SneakyThrows
     public void deleteAlignedFeaturesByIds(List<String> alignedFeatureIds) {
         project().cascadeDeleteAlignedFeatures(alignedFeatureIds.stream().map(Long::parseLong).sorted().toList());
+    }
+
+
+    @SneakyThrows
+    @Override
+    public Page<Run> findRuns(@Nullable String searchQuery, Pageable pageable, @NotNull EnumSet<Run.OptField> optFields) {
+        if (searchQuery==null || searchQuery.isBlank())
+            return findRuns(pageable, optFields);
+
+        if (searchService == null)
+            throw new ResponseStatusException(SERVICE_UNAVAILABLE, "Cannot perform search query. Search service not available!");
+
+        Page<String> ids = searchService.getSearchIndexReader().search(projectId, searchQuery, pageable, Run.class, "runId", "name");
+
+        //todo what is faster? filter or get by key? in theory filter should be better but with nitrite you never know.
+        List<Run> runs = storage().findStr(Filter.where("runId").in(ids.stream().map(Long::parseLong).toArray(Long[]::new)), LCMSRun.class)
+                .map(r -> convertToApiRun(r, optFields)).toList();
+
+        return new PageImpl<>(runs, pageable, ids.getTotalElements());
     }
 
     @SneakyThrows
@@ -1530,13 +1602,22 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
 
     @SneakyThrows
     @Override
+    public Page<Run> findRunsByGroup(@NotNull String groupName, Pageable pageable, @NotNull EnumSet<Run.OptField> optFields) {
+        Optional<de.unijena.bioinf.ms.persistence.model.core.tags.TagGroup> tagGroup = storage().findStr(Filter.where("groupName").eq(groupName), de.unijena.bioinf.ms.persistence.model.core.tags.TagGroup.class).findFirst();
+        if (tagGroup.isEmpty())
+            return Page.empty();
+        return findRuns(tagGroup.get().getLuceneQuery(), pageable, optFields);
+    }
+
+    @SneakyThrows
+    @Override
     public Run findRunById(String runId, @NotNull EnumSet<Run.OptField> optFields) {
         return storage().getByPrimaryKey(Long.parseLong(runId), LCMSRun.class)
                 .map(run -> convertToApiRun(run, optFields))
                 .orElseThrow(() -> new ResponseStatusException(NOT_FOUND, "There is no run '" + runId + "' in project " + projectId + "."));
     }
 
-    private Page<Run> findRunsByFilter(Pageable pageable, Filter filter, EnumSet<Run.OptField> optFields) throws IOException {
+    /*private Page<Run> findRunsByFilter(Pageable pageable, Filter filter, EnumSet<Run.OptField> optFields) throws IOException {
         long total;
         List<Run> objects;
         if (pageable.isUnpaged() && pageable.getSort().isUnsorted()) {
@@ -1551,9 +1632,9 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
         }
 
         return new PageImpl<>(objects, pageable, total);
-    }
+    }*/
 
-    @SneakyThrows
+    /*@SneakyThrows
     @Override
     @SuppressWarnings("unchecked")
     public <T, O extends Enum<O>> Page<T> findObjectsByTagFilter(Class<?> target, @NotNull String luceneQuery, Pageable pageable, @NotNull EnumSet<O> optFields) {
@@ -1583,7 +1664,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
 
         Filter objectFilter = Filter.where(fieldName.get()).in(objectIds);
         return (Page<T>) findRunsByFilter(pageable, objectFilter, (EnumSet<Run.OptField>) optFields);
-    }
+    }*/
 
     private Class<?> convertToProjectObjectClass(Class<?> taggable) {
         if (taggable.equals(Run.class))
@@ -1610,8 +1691,10 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
             List<de.unijena.bioinf.ms.persistence.model.core.tags.Tag> upsertTags = new ArrayList<>();
             List<de.unijena.bioinf.ms.persistence.model.core.tags.Tag> insertTags = new ArrayList<>();
 
+            Map<String, de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition> tagDefByName = new HashMap<>();
+
             for (Tag tag : tags) {
-                de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition tagDef = searchService.getTagDefinition(projectId, tag.getTagName());
+                de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition tagDef = tagDefByName.computeIfAbsent(tag.getTagName(), tagName -> project().findTagDefinitionByName(tagName).orElse(null));
 
                 if (tagDef == null)
                     throw new ResponseStatusException(NOT_FOUND, "There is no TagDefinition '" + tag.getTagName() + "' in project " + projectId + ".");
@@ -1658,7 +1741,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     @SneakyThrows
     @Override
     public List<TagDefinition> findTags() {
-        return searchService.getTagDefinitions(projectId).map(this::convertToApiDefinition).toList();
+        return project().findAllTagDefinitionsStr().map(this::convertToApiDefinition).collect(Collectors.toList());
     }
 
     @Override
@@ -1675,19 +1758,16 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     @SneakyThrows
     @Override
     public List<TagDefinition> findTagsByType(@NotNull String tagType) {
-        return searchService.getTagDefinitions(projectId)
-                .filter(tagDef -> tagType.equals(tagDef.getTagType()))
-                .map(this::convertToApiDefinition).toList();
+        return storage().findStr(Filter.where("tagType").eq(tagType), de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition.class)
+                .map(this::convertToApiDefinition).collect(Collectors.toList());
     }
 
     @SneakyThrows
     @Override
     public TagDefinition findTagByName(String tagName) {
-        de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition tagDef = searchService.getTagDefinition(projectId, tagName);
-        if (tagDef == null)
-            throw new ResponseStatusException(NOT_FOUND, "There is no tag definition '" + tagName + "' in project " + projectId + ".");
-
-        return convertToApiDefinition(tagDef);
+        return storage().findStr(Filter.where("tagName").eq(tagName), de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition.class)
+                .findFirst().map(this::convertToApiDefinition)
+                .orElseThrow(() -> new ResponseStatusException(NOT_FOUND, "There is no tag definition '" + tagName + "' in project " + projectId + "."));
     }
 
     @SneakyThrows
@@ -1700,15 +1780,14 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
                 .filter(tagDef -> !existingNames.contains(tagDef.getTagName()))
                 .map(tagDef -> convertToProjectDefinition(tagDef, editable)).toList();
         storage().insertAll(filtered);
-        storage().flush(); //flush to ensure search service cache is updated before returning.
-
         return filtered.stream().map(this::convertToApiDefinition).toList();
     }
 
     @SneakyThrows
     @Override
     public void deleteTags(String tagName) {
-        de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition tagDef = searchService.getTagDefinition(projectId, tagName);
+        de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition tagDef = storage().findStr(Filter.where("tagName").eq(tagName), de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition.class)
+                .findFirst().orElse(null);
         if (tagDef == null) {
             throw new ResponseStatusException(NOT_FOUND, "No such tag: " + tagName);
         }
@@ -1717,14 +1796,14 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
         }
         storage().removeAll(Filter.where("tagName").eq(tagName), de.unijena.bioinf.ms.persistence.model.core.tags.Tag.class);
         storage().remove(tagDef);
-        storage().flush(); //flush to ensure search service cache is updated before returning.
     }
 
     @SuppressWarnings("unchecked")
     @SneakyThrows
     @Override
     public TagDefinition addPossibleValuesToTagDefinition(String tagName, List<?> formattedPossibleValues) {
-        de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition tagDef = searchService.getTagDefinition(projectId, tagName);
+        de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition tagDef = storage().findStr(Filter.where("tagName").eq(tagName), de.unijena.bioinf.ms.persistence.model.core.tags.TagDefinition.class)
+                .findFirst().orElse(null);
         if (tagDef == null)
             throw new ResponseStatusException(NOT_FOUND, "No such tag: " + tagName);
 
@@ -1750,14 +1829,6 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
         return convertToApiDefinition(tagDef);
     }
 
-    @SneakyThrows
-    @Override
-    public <T, O extends Enum<O>> Page<T> findObjectsByTagGroup(Class<?> target, @NotNull String group, Pageable pageable, @NotNull EnumSet<O> optFields) {
-        Optional<de.unijena.bioinf.ms.persistence.model.core.tags.TagGroup> tagGroup = storage().findStr(Filter.where("groupName").eq(group), de.unijena.bioinf.ms.persistence.model.core.tags.TagGroup.class).findFirst();
-        if (tagGroup.isEmpty())
-            return Page.empty();
-        return findObjectsByTagFilter(target, tagGroup.get().getLuceneQuery(), pageable, optFields);
-    }
 
     @SneakyThrows
     @Override
@@ -2045,20 +2116,29 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     @Override
     public Page<FormulaCandidate> findFormulaCandidatesByFeatureId(String alignedFeatureId, Pageable pageable, @NotNull EnumSet<FormulaCandidate.OptField> optFields) {
         long longAFId = Long.parseLong(alignedFeatureId);
-        Pair<String[], Database.SortOrder[]> sort = sortFormulaCandidate(pageable.getSort());
 
         //load ms data only once per formula candidate
-        final MSData msData = Stream.of(/*FormulaCandidate.OptField.annotatedSpectrum,*/ FormulaCandidate.OptField.isotopePattern).anyMatch(optFields::contains)
+        final MSData msData = Stream.of(FormulaCandidate.OptField.isotopePattern).anyMatch(optFields::contains)
                 ? project().findByFeatureIdStr(longAFId, MSData.class).findFirst().orElse(null) : null;
 
-        List<FormulaCandidate> candidates;
-        if (pageable.isPaged()) {
-            candidates = project().findByFeatureIdStr(longAFId, de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate.class, pageable.getOffset(), pageable.getPageSize(), sort.getLeft()[0], sort.getRight()[0])
-                    .map(fc -> convertFormulaCandidate(msData, fc, optFields)).toList();
+
+        Filter.FilterClause defaultSortFilter = Filter.and(Filter.where("alignedFeatureId").eq(longAFId), Filter.where("formulaRank").gt(0));
+        Pair<String[], Database.SortOrder[]> sort = sortFormulaCandidate(pageable.getSort());
+        final boolean defaultSort = pageable.getSort().isUnsorted() || sort.getLeft().length == 0 || "formulaRank".equals(sort.getLeft()[0]);
+
+        Stream<de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate> stream;
+        if (pageable.isUnpaged() && defaultSort)
+            stream = storage().findStr(defaultSortFilter, de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate.class);
+        else if (defaultSort)
+            stream = storage().findStr(defaultSortFilter, de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate.class, pageable.getOffset(), pageable.getPageSize());
+        else if (pageable.isUnpaged()) {
+            stream = storage().findStr(defaultSortFilter, de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate.class, sort.getLeft(), sort.getRight());
         } else {
-            candidates = project().findByFeatureIdStr(longAFId, de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate.class, sort.getLeft()[0], sort.getRight()[0])
-                    .map(fc -> convertFormulaCandidate(msData, fc, optFields)).toList();
+            stream = storage().findStr(defaultSortFilter, de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate.class, pageable.getOffset(), pageable.getPageSize(), sort.getLeft(), sort.getRight());
         }
+
+        List<FormulaCandidate> candidates = stream.map(fc -> convertFormulaCandidate(msData, fc, optFields)).toList();
+
         long total = project().countByFeatureId(longAFId, de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate.class);
 
         return new PageImpl<>(candidates, pageable, total);
@@ -2113,22 +2193,36 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
         return findStructureCandidatesByFeatureId(DenovoStructureMatch.class, alignedFeatureId, pageable, optFields);
     }
 
-    private <T extends StructureMatch> Page<StructureCandidateFormula> findStructureCandidatesByFeatureId(Class<T> clzz, String alignedFeatureId, Pageable pageable, @NotNull EnumSet<StructureCandidateScored.OptField> optFields) {
+    @SneakyThrows
+    private <T extends StructureMatch> Page<StructureCandidateFormula> findStructureCandidatesByFeatureId(Class<T> clz, String alignedFeatureId, Pageable pageable, @NotNull EnumSet<StructureCandidateScored.OptField> optFields) {
         long longAFId = Long.parseLong(alignedFeatureId);
+        Filter.FilterClause defaultSortFilter = Filter.and(Filter.where("alignedFeatureId").eq(longAFId), Filter.where("structureRank").gt(0));
         Pair<String[], Database.SortOrder[]> sort = sortStructureMatch(pageable.getSort());
+        final boolean defaultSort = pageable.getSort().isUnsorted() || sort.getLeft().length == 0 || "structureRank".equals(sort.getLeft()[0]);
+
+        Stream<T> stream;
+        if (pageable.isUnpaged() && defaultSort)
+            stream = storage().findStr(defaultSortFilter, clz);
+        else if (defaultSort)
+            stream = storage().findStr(defaultSortFilter, clz, pageable.getOffset(), pageable.getPageSize());
+        else if (pageable.isUnpaged()) {
+            stream = storage().findStr(defaultSortFilter, clz, sort.getLeft(), sort.getRight());
+        } else {
+            stream = storage().findStr(defaultSortFilter, clz, pageable.getOffset(), pageable.getPageSize(), sort.getLeft(), sort.getRight());
+        }
+
 
         Long2ObjectMap<de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate> fidToFC = new Long2ObjectOpenHashMap<>();
 
-        List<StructureCandidateFormula> candidates = project().findByFeatureIdStr(longAFId, clzz, pageable.getOffset(), pageable.getPageSize(), sort.getLeft()[0], sort.getRight()[0])
-                .map(candidate -> {
-                    de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate fc = fidToFC
-                            .computeIfAbsent(candidate.getFormulaId(), k -> project()
-                                    .findByFormulaIdStr(k, de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate.class)
-                                    .findFirst().orElseThrow());
-                    return convertStructureMatch(fc.getMolecularFormula(), fc.getAdduct(), candidate, optFields);
-                }).toList();
+        List<StructureCandidateFormula> candidates = stream.map(candidate -> {
+            de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate fc = fidToFC
+                    .computeIfAbsent(candidate.getFormulaId(), k -> project()
+                            .findByFormulaIdStr(k, de.unijena.bioinf.ms.persistence.model.sirius.FormulaCandidate.class)
+                            .findFirst().orElseThrow());
+            return convertStructureMatch(fc.getMolecularFormula(), fc.getAdduct(), candidate, optFields);
+        }).toList();
 
-        long total = project().countByFeatureId(longAFId, clzz);
+        long total = project().countByFeatureId(longAFId, clz);
         return new PageImpl<>(candidates, pageable, total);
     }
 
@@ -2136,9 +2230,8 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     @Override
     public StructureCandidateScored findTopStructureCandidateByFeatureId(String alignedFeatureId, @NotNull EnumSet<StructureCandidateScored.OptField> optFields) {
         long longAFId = Long.parseLong(alignedFeatureId);
-        Pair<String[], Database.SortOrder[]> sort = sortStructureMatch(Sort.by(Sort.Direction.DESC, "csiScore"));
-        return project().findByFeatureIdStr(longAFId, CsiStructureMatch.class, sort.getLeft()[0], sort.getRight()[0])
-                .findFirst().map(s -> convertStructureMatch(s, optFields)).orElse(null);
+        return project().findTopStructureMatchByFeatureId(longAFId, CsiStructureMatch.class)
+                .map(s -> convertStructureMatch(s, optFields)).orElse(null);
     }
 
     @Override
@@ -2255,7 +2348,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     @SneakyThrows
     @Override
     public String getFingerIdDataCSV(int charge) {
-        Optional<FingerIdData> dataOpt = projectSpaceManager.getProject().findFingerprintData(FingerIdData.class, charge);
+        Optional<FingerIdData> dataOpt = project().findFingerprintData(FingerIdData.class, charge);
         if (dataOpt.isEmpty())
             return null;
         StringWriter writer = new StringWriter();
@@ -2266,7 +2359,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     @SneakyThrows
     @Override
     public String getCanopusClassyFireDataCSV(int charge) {
-        Optional<CanopusCfData> dataOpt = projectSpaceManager.getProject().findFingerprintData(CanopusCfData.class, charge);
+        Optional<CanopusCfData> dataOpt = project().findFingerprintData(CanopusCfData.class, charge);
         if (dataOpt.isEmpty())
             return null;
         StringWriter writer = new StringWriter();
@@ -2277,7 +2370,7 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
     @SneakyThrows
     @Override
     public String getCanopusNpcDataCSV(int charge) {
-        Optional<CanopusNpcData> dataOpt = projectSpaceManager.getProject().findFingerprintData(CanopusNpcData.class, charge);
+        Optional<CanopusNpcData> dataOpt = project().findFingerprintData(CanopusNpcData.class, charge);
         if (dataOpt.isEmpty())
             return null;
         StringWriter writer = new StringWriter();
@@ -2295,5 +2388,20 @@ public class NoSQLProjectImpl implements Project<NoSQLProjectSpaceManager> {
                         throw new ResponseStatusException(BAD_REQUEST, "Tree exists but FormulaID does not belong to the requested FeatureID. Are you using the correct Ids?");
                     return new FTJsonWriter().treeToJsonString(ftreeRes.getFTree());
                 }).orElse(null);
+    }
+
+    private <T> Stream<T> findPageStr(Class<T> clz, Pageable pageable, Function<Sort,
+            Pair<String[], Database.SortOrder[]>> sortTransformer
+    ) throws IOException {
+        if (pageable.isUnpaged() && pageable.getSort().isUnsorted())
+            return storage().findAllStr(clz);
+        if (pageable.getSort().isUnsorted())
+            return storage().findAllStr(clz, pageable.getOffset(), pageable.getPageSize());
+
+        Pair<String[], Database.SortOrder[]> sort = sortTransformer.apply(pageable.getSort());
+        if (pageable.isUnpaged())
+            return storage().findAllStr(clz, sort.getLeft(), sort.getRight());
+
+        return storage().findAllStr(clz, pageable.getOffset(), pageable.getPageSize(), sort.getLeft(), sort.getRight());
     }
 }
